# unique-sdk-kotlin

./: .gitignore  LICENSE  LICENSE.md  README.MD  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/actions/publish-artifacts/: action.yml
.github/workflows/: gradle-publishing.yml
buildSrc/: build.gradle.kts
java-signer/: build.gradle.kts
java-signer/src/signer/: Cargo.toml
kotlin-multiplatform/: build.gradle.kts
kotlin-multiplatform/src/main/res/values/: keystore_values.xml
kotlin-sdk/: .gitignore  build.gradle.kts
kotlin-sdk/src/androidMain/res/values/: keystore_values.xml
kotlin-sdk/src/jvmTest/resources/request/: BalanceTransferBody.json
kotlin-sdk/src/openApiGenerator/: .gitignore
src/jvmMain/kotlin/network/unique/client/: KtorClientWrapper.kt
src/jvmMain/kotlin/network/unique/model/: SignerPayloadJSONDto.kt
src/jvmMain/kotlin/network/unique/remote/: SdkService.kt  SdkServiceImpl.kt  SdkServiceLocalSignImpl.kt
src/jvmMain/kotlin/network/unique/service/: AccountService.kt  AddressUtilsService.kt  BalanceService.kt  ExtrinsicService.kt  (+2 more)
src/jvmTest/resources/request/: SubmitTxBody.json  UnsignedTxPayloadBody.json
src/jvmTest/resources/response/: ExtrinsicResultResponse.json  submitWatchResponse.json
unique-sdk/: .gitignore  build.gradle.kts
unique-sdk-java-signer/: build.gradle.kts
unique-sdk-java-signer/src/signer/: Cargo.toml
unique-sdk-java-signer/src/signer/src/: lib.rs
unique-sdk/src/jvmTest/resources/response/: ExtrinsicResultResponse.json
unique-sdk/src/openApiGenerator/: .gitignore
(+703 files in other folders)
